added session extension and librarys

--- a/StoreServer/StoreServer.csproj
+++ b/StoreServer/StoreServer.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\StoreServerBL\StoreServerBL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
