--- a/StoreServer/appsettings.json
+++ b/StoreServer/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreDB": "Server=localhost\\sqlexpress;Database=StoreDB;Trusted_Connection=True;"
+    "StoreDB": "Server=localhost\\SQLEXPRESS01;Database=StoreDB;Trusted_Connection=True;"
   }
 }
